// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The DateInput component should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 16,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "marginTop": 5,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          }
        }
      />
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      isVisible={false}
      onHide={[Function]}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </Modal>
  </View>
</View>
`;

exports[`The DateInput component should render with a displayValue 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 16,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "marginTop": 5,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "justifyContent": "center",
              "lineHeight": 18,
              "textAlign": "center",
            }
          }
        >
          2015/01/01
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      isVisible={false}
      onHide={[Function]}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </Modal>
    <View
      onLayout={[Function]}
      pointerEvents="none"
      style={
        Object {
          "justifyContent": "center",
          "opacity": 0.8,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0.8,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        numberOfLines={0}
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(39, 39, 46, 0.6)",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
            "paddingVertical": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The DateInput component should render with a label 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 16,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "marginTop": 5,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "justifyContent": "center",
              "lineHeight": 18,
              "textAlign": "center",
            }
          }
        >
          2015/01/01
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      isVisible={false}
      onHide={[Function]}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </Modal>
    <View
      onLayout={[Function]}
      pointerEvents="none"
      style={
        Object {
          "justifyContent": "center",
          "opacity": 0.8,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0.8,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        numberOfLines={0}
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(39, 39, 46, 0.6)",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
            "paddingVertical": 4,
          }
        }
      >
        Date Label
      </Text>
    </View>
  </View>
</View>
`;

exports[`The DateInput component should render with a placeholder 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 16,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "marginTop": 5,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "justifyContent": "center",
              "lineHeight": 18,
              "textAlign": "center",
            }
          }
        >
          mm/dd/yyyy
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      isVisible={false}
      onHide={[Function]}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </Modal>
    <View
      onLayout={[Function]}
      pointerEvents="none"
      style={
        Object {
          "justifyContent": "center",
          "opacity": 0.8,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0.8,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        numberOfLines={0}
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(39, 39, 46, 0.6)",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
            "paddingVertical": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The DateInput component should render with an error 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 16,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "marginTop": 5,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          }
        }
      />
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      isVisible={false}
      onHide={[Function]}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </Modal>
    <Text
      style={
        Object {
          "color": "#c64f55",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
          "paddingTop": 8,
        }
      }
    >
      Danger Will Robinson
    </Text>
  </View>
</View>
`;

exports[`The DateInput component should render without a maximum date 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "marginVertical": 16,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        bordered={false}
        disabled={false}
        pill={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#17B582",
            "borderColor": "#17B582",
            "borderRadius": 16,
            "borderWidth": 0.5,
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "center",
            "marginTop": 5,
            "opacity": 1,
            "overflow": "hidden",
            "paddingHorizontal": 12,
            "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "color": "#F4F7F8",
              "fontFamily": "InterUI-Bold",
              "fontSize": 12,
              "justifyContent": "center",
              "lineHeight": 18,
              "textAlign": "center",
            }
          }
        >
          2015/01/01
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      isVisible={false}
      onHide={[Function]}
      transparent={true}
      visible={false}
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 750,
          }
        }
      />
    </Modal>
    <View
      onLayout={[Function]}
      pointerEvents="none"
      style={
        Object {
          "justifyContent": "center",
          "opacity": 0.8,
          "position": "absolute",
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0.8,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        numberOfLines={0}
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(39, 39, 46, 0.6)",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
            "paddingVertical": 4,
          }
        }
      >
        Date Label
      </Text>
    </View>
  </View>
</View>
`;
